--- a/P010625.opf/layers/v001/Pagination.yml
+++ b/P010625.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 7276571842324b038e504d38bac77a1a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   42957a8f00584e49b1d5e9b6e963c864:
