--- a/P010625.opf/meta.yml
+++ b/P010625.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010625
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1AC412
   title: ཤིང་བཟའ་སྐལ་བཟང་ཆོས་རྒྱན་གྱི་སྨན་ཡིག
