--- a/P010625.opf/meta.yml
+++ b/P010625.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P010625
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-20 10:17:03.683149
 source_metadata:
   id: bdr:W1AC412
   title: ཤིང་བཟའ་སྐལ་བཟང་ཆོས་རྒྱན་གྱི་སྨན་ཡིག
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 650
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
